feat: Adicionando primeira parte do envio dos emails
